# system0_temp

./: .gitignore  .gitmodules  COLLABORATION.md  Makefile  README.md  flake.nix
bazel-bin/: .bazelrc  BUILD  MODULE.bazel  README.md
bazel-go/: .bazelrc  BUILD  MODULE.bazel  maven_install.json
bazel-go/rules/: BUILD  generate.bzl  rules.bzl
bazel-soc-bin/: .bazelrc  BUILD  MODULE.bazel
bazel-soc-bin/sim/: dpi_mem.cpp  dpi_mem.h  main.cpp
bazel-soc-go/: .bazelrc  BUILD  MODULE.bazel  maven_install.json
bazel-soc-go/tools/: BazelElaborate.scala
bazel-soc-test/: .bazelrc  BUILD  MODULE.bazel
bazel-soc-test/rules/: BUILD  cpu_tests_soc.bzl
bazel-soc-test/scripts/: build_cpu_test.sh  run_cpu_test.sh
bazel-test/: .bazelrc  BUILD  MODULE.bazel  README.md
bazel-test/rules/: BUILD  cpu_tests.bzl
bazel-test/scripts/: BUILD  build_cpu_test.sh  run_cpu_test.sh
scripts/: check_locked_deps.sh
tests/: README.md
tests/common/: linker.ld  soc_bootloader.S  soc_bootloader.ld
tests/common/include/: am.h
tests/common/soft-fp/: sfp-machine.h
