"""Chisel to Verilog compilation with Bazel"""

module(
    name = "bazel-go",
)

# Bazel dependencies
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Configure Scala version
scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "2.13.17")
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
use_repo(
    scala_deps,
    "io_bazel_rules_scala_scala_compiler",
    "io_bazel_rules_scala_scala_library",
    "io_bazel_rules_scala_scala_reflect",
    "rules_scala_toolchains",
)

SCALA_VERSION = "2.13.17"
SCALA_VERSION_SHORT = SCALA_VERSION.rpartition(".")[0]
CHISEL_VERSION = "7.2.0"

MAVEN_DEPS = {
    "org.scala-lang:scala-compiler": SCALA_VERSION,
    "org.scala-lang:scala-library": SCALA_VERSION,
    "org.scala-lang:scala-reflect": SCALA_VERSION,
}

MAVEN_SHORT_DEPS = {
    "org.chipsalliance:chisel": CHISEL_VERSION,
    "org.chipsalliance:firtool-resolver": "2.0.1",
}

MAVEN_LONG_DEPS = {
    "org.chipsalliance:chisel-plugin": CHISEL_VERSION,
}

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = ["{}_{}:{}".format(dep, SCALA_VERSION_SHORT, version) for (dep, version) in MAVEN_SHORT_DEPS.items()] +
                ["{}_{}:{}".format(dep, SCALA_VERSION, version) for (dep, version) in MAVEN_LONG_DEPS.items()] +
                ["{}:{}".format(dep, version) for (dep, version) in MAVEN_DEPS.items()],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
